--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,17 +1,5 @@
 <%= form_for @book, :html=>{:multipart=>true} do |f| %>
-<% if @book.errors.any? %>
-<div id="error_explanation">
-  <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
-
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-    <li>
-      <%= message %>
-    </li>
-    <% end %>
-  </ul>
-</div>
-<% end %>
+<%= errors @book %>
 
 <div class="field">
   <%= f.label :name %>
