--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -1,17 +1,5 @@
 <%= form_for @quote, url: book_quotes_path, html: {multipart: true} do |f| %>
-<% if @quote.errors.any? %>
-<div id="error_explanation">
-  <h2><%= pluralize(@quote.errors.count, "error") %> prohibited this quote from being saved:</h2>
-
-  <ul>
-    <% @quote.errors.full_messages.each do |message| %>
-    <li>
-      <%= message %>
-    </li>
-    <% end %>
-  </ul>
-</div>
-<% end %>
+<%= errors @quote %>
 
 <div class="field">
   <%= f.label "Quote #{:method}" %>
