--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,7 +13,6 @@
 
     <div class="col-xs-6">
       <p>
-        <strong>Picture:</strong>
         <%= image_tag(@book.picture_url, :width=>300) if @book.picture.present? %>
       </p>
     </div>
@@ -53,15 +52,20 @@
       </table>
 
       <div class="btn btn-default">
-        <%= link_to 'Edit', edit_book_path(@book) %>
-      </div>
-      <div class="btn btn-default">
         <%= link_to 'Back', books_path %>
       </div>
 
+      <% if current_user == @book.user %>
       <div class="btn btn-default">
-        <%= link_to 'Add Quote', new_book_quote_path(@book) %>
+        <%= link_to 'Edit', edit_book_path(@book) if current_user == @book.user %>
       </div>
+      <div class="btn btn-default">
+        <%= link_to 'Add Quote', new_book_quote_path(@book)  %>
+      </div>
+      <div class="btn btn-default">
+        <%= link_to 'Add Quote', new_book_quote_path(@book)  %>
+      </div>
+      <% end %>
 
         <div class="row">
           <div class="col-xs-12">
