--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -5,7 +5,7 @@
   <%= f.label "Quote #{:method}" %>
   <br>
   <%= f.hidden_field :id %>
-  <%= f.text_field :text %>
+  <%= f.text_area :text %>
 </div>
 
 <div class="actions">
