--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>BookLib</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    
+
     <%= csrf_meta_tags %>
   </head>
   <body>
@@ -17,7 +17,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">The BookLib app</a>
+          <a class="navbar-brand" href="/">Quotum</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -28,7 +28,7 @@
 
           <p class="navbar-text pull-right">
             <% if user_signed_in? %>
-            <a href="/panel"> Logged in as <strong><%= current_user.email %></strong>. </a>
+            <a href="/panel"> Logged in as <strong><%= current_user.email %></strong></a>
             <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
             <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
             <% else %>
@@ -56,7 +56,7 @@
     </div>
 
     <footer>
-      <div class="container">
+      <div class="container click-me">
         BookLib 2016
       </div>
     </footer>
