--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,13 +32,19 @@
             <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
             <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
             <% else %>
-            <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-            <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+              <%= link_to "Sign up", "#sign_up", "data-toggle" => "modal", :class => 'navbar-link'  %> |
+              <%= link_to "Sign in", "#sign_in", "data-toggle" => "modal", :class => 'navbar-link'  %>
             <% end %>
           </p>
+
         </div>
       </div>
     </nav>
+
+    <% unless current_user %>
+      <%= render 'shared/sign_in' %>
+      <%= render 'shared/sign_up' %>
+    <% end %>
 
     <% if notice %>
     <p class="alert alert-success">
@@ -50,10 +56,6 @@
       <%= alert %>
     </p>
     <% end %>
-
-   <div class="output">
-
-   </div>
 
     <div class="container">
       <%= yield %>
