--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -4,29 +4,29 @@
 <div class="field">
   <%= f.label :name %>
   <br>
-  <%= f.text_field :name %>
+  <%= f.text_field :name, class: "form-control" %>
 
 
 </div>
 <div class="field">
   <%= f.label :author %>
   <br>
-  <%= f.text_field :author %>
+  <%= f.text_field :author, class: "form-control" %>
 </div>
 <div class="field">
   <%= f.label :picture %>
   <br>
-  <%= f.file_field :picture %>
+  <%= f.file_field :picture, class: "form-control" %>
 </div>
 <div class="field">
   <%= f.label :context %>
   <br>
-  <%= f.text_area :context %>
+  <%= f.text_area :context, class: "form-control" %>
 </div>
 <div class="field">
   <%= f.label :is_draft %>
   <br>
-  <%= f.check_box :is_draft %>
+  <%= f.check_box :is_draft, class: "check-box" %>
 </div>
 
 <% @genres = Genre.all %>
@@ -46,7 +46,7 @@
       <td> <%= genre.name %> </td>
       <td>
       <%= hidden_field_tag "genre[#{genre.id}]", "0" %>
-      <%= check_box_tag "genre[#{genre.id}]", "1", (@connections.select {|conn| conn.genre_id == genre.id}.length > 0)%>
+      <%= check_box_tag "genre[#{genre.id}]", "1", (@connections.select {|conn| conn.genre_id == genre.id}.length > 0), class: "check-box" %>
       </td>
     </tr>
     <% end %>
@@ -54,7 +54,7 @@
 </table>
 
 <div class="actions">
-  <%= f.submit %>
+  <%= f.submit class: "btn btn-lg btn-primary btn-block" %>
 </div>
 
 <% end %>
