--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>morbook js_login</title>
+    <title>morbook</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 
     <%= csrf_meta_tags %>
@@ -17,7 +17,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Quotum</a>
+          <a class="navbar-brand" href="/">morbook</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
