add likes with count + problem with deleting likes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 
           <p class="navbar-text pull-right">
             <% if user_signed_in? %>
-            <a href="/panel"> Logged in as <strong><%= current_user.email %></strong></a>
+            <a href="/panel"><strong>Мой профиль</strong></a>
             <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
             <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
             <% else %>
