--- a/app/views/panel/index.html.erb
+++ b/app/views/panel/index.html.erb
@@ -33,7 +33,7 @@
       </div></td>
       <td>
       <div class="btn btn btn-danger">
-        <%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%= link_to 'Destroy', book, method: :delete %>
       </div></td>
     </tr>
     <% end %>
@@ -75,7 +75,7 @@
       </div></td>
       <td>
       <div class="btn btn btn-danger">
-        <%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%= link_to 'Destroy', book, method: :delete %>
       </div></td>
     </tr>
     <% end %>
