--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -1,6 +1,6 @@
 <div>
   <p> <%= @quote.text %> </p>
-  <%= link_to "like me", like_book_quote_path(), style: "float: right;" %>
+  <%= content_tag :div , "likes: #{@total_quote_likes}", value: "#{like_book_quote_path()}", class: ( @i_can_like_it ? "like btn btn-info" : "like btn btn-danger"), style: "float: right;" %>
 </div>
 
 
@@ -14,7 +14,7 @@
 </div>
 
 <div class="btn btn btn-danger">
-  <%= link_to 'Destroy', book_quote_path(@quote.book_id, @quote.id), method: :delete, data: { confirm: 'Are you sure?' }%>
+  <%= link_to 'Destroy', book_quote_path(@quote.book_id, @quote.id), method: :delete %>
 </div>
 
 <% end %>
