--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -64,6 +64,7 @@
             <% @quotes.each do |quote| %>
               <hr/>
                 <p><%= link_to quote.text, book_quote_path(@book, quote) %></p>
+                <%= content_tag :div , "likes: #{quote.quote_likes.count}", value: "#{like_book_quote_path(@book, quote)}", class: ( current_user.likes.joins( :quote_like ).merge( quote.quote_likes ).count == 0 ? "like btn btn-info" : "like btn btn-danger"), style: "float: right;"%>
               <hr/>
             <% end %>
           </div>
